Call SetGeometryDirty if we need to call DistributeHeightToRows, since DistributeHeightToRows can't deal with rows that have already had height distributed to them.  Patch by Daniel Holbert <dholbert@mozilla.com>.  b=380227  r+sr=dbaron